avoid last line spacing

--- a/src/style/components/list.scss
+++ b/src/style/components/list.scss
@@ -9,6 +9,12 @@
       column-span: all;
       height: rem( 40 );
     }
+
+    + li:last-child {
+      &::after {
+        content: none;
+      }
+    }
   }
 
   @media (max-width: $max-medium) {
